adding day2 and day3

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "day1": "tsc && node dist/day1/day1.js",
+    "day2": "tsc && node dist/day2/day2.js",
+    "day3": "tsc && node dist/day3/day3.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
