--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "day6": "tsc && node dist/day6/day6.js",
     "day7": "tsc && node dist/day7/day7.js",
     "day8": "tsc && node dist/day8/day8.js",
+    "day9": "tsc && node dist/day9/day9.js",
+    "day10": "tsc && node dist/day10/day10.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
