--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "day9": "tsc && node dist/day9/day9.js",
     "day10": "tsc && node dist/day10/day10.js",
     "day11": "tsc && node dist/day11/day11.js",
+    "day12": "tsc && node dist/day12/day12.js",
+    "day13": "tsc && node dist/day13/day13.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
