--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "day12": "tsc && node dist/day12/day12.js",
     "day13": "tsc && node dist/day13/day13.js",
     "day14": "tsc && node dist/day14/day14.js",
+    "day15": "tsc && node dist/day15/day15.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
